# Master_Thesis_liu_AI_ref_detection_and_correction

./: .gitignore  README.md  main.py  name.txt  prompt.md  pyproject.toml  results.md  student.csv  test_dblp_tools.py  test_parser.py
_agents/: _correction_agent.py  _evaluation_agent.py  _pipeline.py  _preparation_agent.py  _validation_agent.py  _validation_agent_react.py
agents/: _evaluation_agent.py  _pipeline.py  _validate_agent.py  agent_client.py  correction_agent.py  evaluation_agent.py  pipeline.py  preparation_agent.py  validation_agent.py
bibtex/bibtex_files/: dblp.bib  mcp.bib  parsed_entries.json  references.bib  report.bib  test.bib  validate.bib
mcp_server_and_agent/: sample.bib  server.py
mcp_server_and_agent/exported_entries/: parsed_entries.json
server/: bibtex_mcp_server.py  mcp.json
server/bibtex/bibtex_files/: references.json
server/bibtex/bibtex_files/downloads/: downloaded_VaswaniSPUJGKP17.bib
tests/: test_google_scholar_fallback.py
tests/test_data/: processed_references.json
utils/: __init__.py  bibtex_parser.py  google_scholar.py  help.py
